-Ported missing import file formats from 1.x: SuperMemo7 text, SuperMemo from
 Palm, Cuecard WCU.
-Double-clicking on a saved set in 'Activate cards' now automatically selects
 the set and closes the window (requested by Michael Campbell).
-In 'edit cards', make more robust of no longer warning about discarding
 changes if you did not make any.
-Changing card types and deleting cards from the card browser is now faster.
-Fix harmless error message when converting to Cloze cards in the card browser
 (reported my Michael Campbell).
-Upgraded to lastest version of Qt/PyQt.


Mnemosyne 2.1 : 2012-09-10

-New import/export format to share cards, which also bundles the media files.
 Supports importing an updated version of the same exported cards, so that
 authors can release updated versions of their cards fixing e.g. spelling
 mistakes.
-Implemented txt export with tab-separated values.
-You can now specify more than 1 tag to add during import
 (requested by Barbara).
-In 'edit cards', no longer warn about discarding changes if you did not make
 any.
-Don't crash card browser when searching for \ (reported by Faemorleto).
-Fix bug where active tags would sometimes not have a checkbox in the card
 browser (reported by Gnome).
-Fixed issues involving tag renaming and syncing (reported by Barbara).
-Made RTL handling for Arabic and Hebrew more robust.
-audio tags now support start and stop arguments, e.g. <audio ...
 start="1" stop="2"> will play the sound file from 1 to 2 seconds.
-Fix crash when cancelling duplicate insertion while converting cards
 (reported by Gnome).
-Fix crash when renaming saved card sets (reported by Pawel Szerszon).
-Make detection of unused media files more robust with case insensitive
 filesystems (reported by Pawel Szerszon and Gnome).
-Fix error when resetting configuration to defaults (reported by
 Pawel Szerszon).
-Fix for missing Chinese labels in the statistics plots (reported by Bono
 Shih).